<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="433dp"
        android:layout_height="77dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/yellow"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/buissnes_track"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/gov"
        app:layout_constraintEnd_toEndOf="@+id/gov"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/gov"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/gov"
        android:layout_width="294dp"
        android:layout_height="92dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/gov"
        android:textColor="#151414"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <Button
        android:id="@+id/bus"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/pri"
        android:textColor="#171616"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gov"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gov"
        app:layout_constraintTop_toBottomOf="@+id/gov"
        app:layout_constraintVertical_bias="0.363" />
</androidx.constraintlayout.widget.ConstraintLayout>