<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_screen"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/yellow"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your Name"
            android:textColorHint="#757575"
            android:textStyle="normal"
            app:hintTextColor="@color/yellow"
            tools:ignore="HardcodedText,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/yellow"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_mail_address"
            android:textColorHint="#757575"
            android:textStyle="normal"
            app:hintTextColor="@color/yellow"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/yellow"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your Password"
            android:textStyle="normal"
            app:hintTextColor="@color/yellow"
            tools:ignore="HardcodedText,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/yellow"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        >

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/sign_up"
        android:textColor="#5C6BC0" />

    <TextView
        android:id="@+id/tvSignIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/if_already_registered_click_sign_in" />

</LinearLayout>